// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EmptyState Default 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c2 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState Long Title, inside a container 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={20}
      type="#2f313a"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="c2 description"
      size={16}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With icon 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c1 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <div
    className="c1 icon-wrapper"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M29.666 11.437a1 1 0 0 1 .334.746V32a1 1 0 0 1-1 1H11a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h13.313a1 1 0 0 1 .666.254l4.687 4.183ZM28 13h-4V9.061L23.932 9H12v22h16V13Zm-13 4.25a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c3 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c4 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With image 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With loading action 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c6 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c6 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c6:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c6 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c6:not(:disabled):hover,
.c6:not(:disabled).hovered,
.c6:not(:disabled):active,
.c6:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c6:not(:disabled):hover .icon,
.c6:not(:disabled).hovered .icon,
.c6:not(:disabled):active .icon,
.c6:not(:disabled).active .icon,
.c6:not(:disabled):focus .icon,
.c6:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c6:not(:disabled).active,
.c6:not(:disabled):active {
  box-shadow: none;
}

.c6:focus,
.c6.focused {
  outline: none;
}

.c6.focus-visible,
.c6.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c7 {
  -webkit-animation: 2s linear 0s infinite normal eoUyJr;
  animation: 2s linear 0s infinite normal eoUyJr;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c5 > * {
  margin: 4px;
}

.c1 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

@media screen and (min-width:321px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <div
    className="c1 icon-wrapper"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31 20c0-6.074-4.926-11-11-11-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11Zm2 0c0 7.18-5.82 13-13 13S7 27.18 7 20 12.82 7 20 7c7.179 0 13 5.821 13 13Zm-13 4.019c1.119 0 1.948.828 1.948 1.903v.044c0 1.074-.83 1.903-1.948 1.903-1.119 0-1.948-.829-1.948-1.903v-.044c0-1.075.83-1.903 1.948-1.903ZM18.008 13.14c-.067-.648.292-1.14.895-1.14h2.195c.602 0 .961.492.894 1.14l-.962 8.416c-.068.605-.47.986-1.03.986s-.962-.38-1.03-.986l-.962-8.416Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c3 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c4 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c5 buttons"
  >
    <button
      className="c6 undefined   "
      data-testid="empty-state-button-Primary Action"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-8px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon c7"
            data-testid="loading"
            height={22}
            viewBox="4 4 32 32"
            width={22}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 8a1 1 0 0 1 2 0v6a1 1 0 0 1-2 0V8Zm2 24a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5ZM8 21a1 1 0 0 1 0-2h6a1 1 0 0 1 0 2H8Zm18-.5a.5.5 0 1 1 0-1h6a.5.5 0 1 1 0 1h-6Zm3.197 7.283a1 1 0 0 1-1.414 1.414l-3.86-3.86a1 1 0 0 1 1.414-1.414l3.86 3.86Zm-12.87-12.87a1 1 0 0 1-1.414 1.414l-4.11-4.11a1 1 0 0 1 1.414-1.414l4.11 4.11Zm-1.664 9.01a1 1 0 0 1 1.414 1.414l-3.86 3.86a1 1 0 0 1-1.414-1.414l3.86-3.86Zm13.12-13.12a1 1 0 0 1 1.414 1.414l-4.11 4.11a1 1 0 0 1-1.414-1.414l4.11-4.11Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <span>
        Primary Action
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c5 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c5:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c5 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c5:not(:disabled):hover,
.c5:not(:disabled).hovered,
.c5:not(:disabled):active,
.c5:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c5:not(:disabled):hover .icon,
.c5:not(:disabled).hovered .icon,
.c5:not(:disabled):active .icon,
.c5:not(:disabled).active .icon,
.c5:not(:disabled):focus .icon,
.c5:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c5:not(:disabled).active,
.c5:not(:disabled):active {
  box-shadow: none;
}

.c5:focus,
.c5.focused {
  outline: none;
}

.c5.focus-visible,
.c5.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5 undefined   "
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-8px)",
          }
        }
      >
        <span
          className="c6"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 0 1-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9ZM14.79 11.202a5.5 5.5 0 0 0-5.5 5.5.5.5 0 1 0 1 0 4.5 4.5 0 0 1 4.5-4.5.5.5 0 0 0 0-1Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <span>
        Primary Action
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action and info 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c5 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c5:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c5 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c5:not(:disabled):hover,
.c5:not(:disabled).hovered,
.c5:not(:disabled):active,
.c5:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c5:not(:disabled):hover .icon,
.c5:not(:disabled).hovered .icon,
.c5:not(:disabled):active .icon,
.c5:not(:disabled).active .icon,
.c5:not(:disabled):focus .icon,
.c5:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c5:not(:disabled).active,
.c5:not(:disabled):active {
  box-shadow: none;
}

.c5:focus,
.c5.focused {
  outline: none;
}

.c5.focus-visible,
.c5.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5 undefined   "
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-8px)",
          }
        }
      >
        <span
          className="c6"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 0 1-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9ZM14.79 11.202a5.5 5.5 0 0 0-5.5 5.5.5.5 0 1 0 1 0 4.5 4.5 0 0 1 4.5-4.5.5.5 0 0 0 0-1Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <span>
        Primary Action
      </span>
    </button>
  </div>
  <div
    className="c7 info"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action, inside a container 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c5 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c5:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c5 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c5:not(:disabled):hover,
.c5:not(:disabled).hovered,
.c5:not(:disabled):active,
.c5:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c5:not(:disabled):hover .icon,
.c5:not(:disabled).hovered .icon,
.c5:not(:disabled):active .icon,
.c5:not(:disabled).active .icon,
.c5:not(:disabled):focus .icon,
.c5:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c5:not(:disabled).active,
.c5:not(:disabled):active {
  box-shadow: none;
}

.c5:focus,
.c5.focused {
  outline: none;
}

.c5.focus-visible,
.c5.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <img
      alt=""
      className="c1 thumbnail"
      height={72}
      size={72}
      src="https://picsum.photos/200?image=0"
      width={72}
    />
    <div
      className="c2 title"
      fontWeight="title"
      size={20}
      type="#2f313a"
    >
      Empty State Title
    </div>
    <div
      className="c3 description"
      size={16}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="c4 buttons"
    >
      <button
        className="c5 undefined   "
        data-testid="empty-state-button-Primary Action"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-8px)",
            }
          }
        >
          <span
            className="c6"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 0 1-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9ZM14.79 11.202a5.5 5.5 0 0 0-5.5 5.5.5.5 0 1 0 1 0 4.5 4.5 0 0 1 4.5-4.5.5.5 0 0 0 0-1Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span>
          Primary Action
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With two actions 1`] = `
.c7 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c7 .farmblocks-icon {
  display: block;
}

.c5 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c5 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c5:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c5 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c5:not(:disabled):hover,
.c5:not(:disabled).hovered,
.c5:not(:disabled):active,
.c5:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c5:not(:disabled):hover .icon,
.c5:not(:disabled).hovered .icon,
.c5:not(:disabled):active .icon,
.c5:not(:disabled).active .icon,
.c5:not(:disabled):focus .icon,
.c5:not(:disabled).focused .icon {
  color: #3498db;
}

.c5:not(:disabled).active,
.c5:not(:disabled):active {
  box-shadow: none;
}

.c5:focus,
.c5.focused {
  outline: none;
}

.c5.focus-visible,
.c5.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c6 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c6 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c6:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c6 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c6:not(:disabled):hover,
.c6:not(:disabled).hovered,
.c6:not(:disabled):active,
.c6:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c6:not(:disabled):hover .icon,
.c6:not(:disabled).hovered .icon,
.c6:not(:disabled):active .icon,
.c6:not(:disabled).active .icon,
.c6:not(:disabled):focus .icon,
.c6:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c6:not(:disabled).active,
.c6:not(:disabled):active {
  box-shadow: none;
}

.c6:focus,
.c6.focused {
  outline: none;
}

.c6.focus-visible,
.c6.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5 undefined   "
      data-testid="empty-state-button-Neutral Action"
      onClick={[Function]}
      type="button"
    >
      <span>
        Neutral Action
      </span>
    </button>
    <button
      className="c6 undefined   "
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-8px)",
          }
        }
      >
        <span
          className="c7"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 0 1-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9ZM14.79 11.202a5.5 5.5 0 0 0-5.5 5.5.5.5 0 1 0 1 0 4.5 4.5 0 0 1 4.5-4.5.5.5 0 0 0 0-1Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      <span>
        Primary Action
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState extended style 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail,
.c0 > .icon-wrapper {
  margin-bottom: 16px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c2 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c1 {
  border: solid 3px lightsalmon;
}

.c1 .icon {
  font-size: 16px;
  color: olive;
}

.c1 .title {
  font-family: fantasy;
}

.c1 .description {
  font-family: serif;
}

.c1 .info {
  font-family: monospace;
}

<div
  className="c0 c1"
>
  <div
    className="c2 icon-wrapper"
  >
    <span
      className="c3"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M29.666 11.437a1 1 0 0 1 .334.746V32a1 1 0 0 1-1 1H11a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h13.313a1 1 0 0 1 .666.254l4.687 4.183ZM28 13h-4V9.061L23.932 9H12v22h16V13Zm-13 4.25a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c4 title"
    fontWeight="title"
    size={20}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c5 description"
    size={16}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c6 info"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;
